# Embarcados

./: README.md
embarcados/lab1/: README.md  graf.py  senoide.c  senoide.txt
embarcados/lab1/sala/sketch_mar23a/: sketch_mar23a.ino
embarcados/lab2/blinkseno/: CMakeLists.txt
embarcados/lab2/blinkseno/main/: main.c
lab04/p1/: main.c
lab04/p2/: main.c
lab05/: main.c
lab06/p1/: main.c
lab06/p2/: main.c
lab07/p1/lab7.1/: main.c
lab07/p3/lab7.3/: graf.py  main.c
lab08/: main.c
lab09/: CMakeLists.txt
lab09/desgracadelab9/main/: http.c  main.c  wifi.c  wifi.h
lab09/main/: CMakeLists.txt  http.h
lab09/main/camada_de_hardware/: botao.c
lab09/main/camada_de_sistema/: udp_cliente.c  udp_cliente.h  wifi.h
lab7.2/: main.c
trabalho_final/sample_project/main/: main.c
trabalho_final_e_lab_09/main/: main.c
trabalho_final_e_lab_09/main/camada_de_hardware/: botao.c  botao.h  joystick.c  joystick.h
trabalho_final_e_lab_09/main/camada_de_sistema/: udp_cliente.c  udp_cliente.h  wifi.c  wifi.h
